.metadata/.plugins/org.eclipse.cdt.ui/inet-framework-simulte-afd56c4.build.log
10:46:25 **** Incremental Build of configuration gcc-debug for project inet-framework-simulte-afd56c4 ****
make MODE=debug CONFIGNAME=gcc-debug -j4 all 
cd src && make
make[1]: Entering directory '/home/joelias/Dropbox/UFF/Pesquisa/power/inet-framework-simulte-afd56c4/src'
stack/phy/layer/LtePhyUeD2D.cc
stack/phy/layer/LtePhyUeD2D.cc: In member function 'virtual void LtePhyUeD2D::handleUpperMessage(omnetpp::cMessage*)':
stack/phy/layer/LtePhyUeD2D.cc:244:44: error: cannot call member function 'virtual void EnergyStorageSimuLTE::handleEnergy()' without object
         EnergyStorageSimuLTE::handleEnergy();
                                            ^
make[1]: *** [../out/gcc-debug/src/stack/phy/layer/LtePhyUeD2D.o] Error 1
Makefile:338: recipe for target '../out/gcc-debug/src/stack/phy/layer/LtePhyUeD2D.o' failed
make: *** [all] Error 2
make[1]: Leaving directory '/home/joelias/Dropbox/UFF/Pesquisa/power/inet-framework-simulte-afd56c4/src'
Makefile:2: recipe for target 'all' failed

10:46:31 Build Finished (took 5s.690ms)

